# Requirements Updated
- pre-commit updated to 3.3.3
- requests updated to 2.30.0
- ruamel.yaml updated to 0.17.26

# Bug Fixes
- Changes HardLink Logic (Thanks to @ColinHebert for the suggestion) Fixes #291
- Additional error checking (Fixes #282)
- Fixes #287 (Thanks to @buthed010203 #290)
- Fixes Remove Orphan crashing when multiprocessing (Thanks to @buthed010203 #289)
- Fixes Remove Orphan from crashing in Windows (Fixes #275)
- Fixes #292

**Full Changelog**: https://github.com/StuffAnThings/qbit_manage/compare/v3.6.2...v3.6.3