@@ -1,0 +1,25 @@
+import hashlib
+
+import bencodepy
+
+
+class TorrentHashGenerator:
+    def __init__(self, torrent_file_path):
+        self.torrent_file_path = torrent_file_path
+
+    def generate_torrent_hash(self):
+        try:
+            with open(self.torrent_file_path, "rb") as torrent_file:
+                torrent_data = torrent_file.read()
+
+            try:
+                torrent_info = bencodepy.decode(torrent_data)
+                info_data = bencodepy.encode(torrent_info[b"info"])
+                info_hash = hashlib.sha1(info_data).hexdigest()
+                return info_hash
+            except KeyError:
+                raise ValueError("Invalid .torrent file format. 'info' key not found.")
+        except FileNotFoundError:
+            raise FileNotFoundError(f"Torrent file '{self.torrent_file_path}' not found.")
+        except Exception as e:
+            raise Exception(f"Error: {e}")
